# nlp-corrector

./: AUTHORS  CMakeLists.txt  README
doc/: doxyfile
ref/: dict.bin.REMOVED.git-id  short_words.txt  test_out_ref  words.txt.REMOVED.git-id
src/: bin_node.cc  bin_node.hh  lev.cc  lev.hh  main.cc  main.cpp  main_compiler.cc  main_search.cc  output.cc  output.hh  output_element.cc  output_element.hh  trieNode.cc  trieNode.hh  trie_node.cc  trie_node.hh  utils.cc  utils.hh
src/compiler/: main_compiler.cc  trie_node.cc  trie_node.hh
src/search/: MyString.hh  bare_trie_helper.cc  bare_trie_helper.hh  bin_node.cc  bin_node.hh  lev.cc  lev.hh  main_search.cc  output.cc  output.hh  output_element.hh
tests/: createTest.py  testSuite.py
tests/tests_files/: fail_0.txt  fail_1.txt  fail_2.txt  one_letter_0.txt  one_letter_1.txt  one_letter_2.txt  rand_1000_0.txt  rand_1000_1.txt  rand_1000_2.txt  rand_100_0.txt  rand_100_1.txt  rand_100_2.txt  rand_10_0.txt  rand_10_1.txt  rand_10_2.txt  rand_3000_0.txt  rand_3000_1.txt  rand_3000_2.txt  rand_300_0.txt  rand_300_1.txt  rand_300_2.txt  rand_30_0.txt  rand_30_1.txt  rand_30_2.txt  test.txt
